...
          <Text style={styles.title}>Add New Activity</Text>
          <TextInput
            testID="todo-name-input"
            style={[styles.input, { color: colors.text.primary }]}
            value={title}
            onChangeText={setTitle}
            placeholder="Activity name"
            placeholderTextColor={colors.text.secondary}
            selectionColor={colors.text.accent}
          />
          
          {Platform.OS === 'ios' ? (
            <View style={styles.timePickerContainer}>
...
            </TouchableOpacity>
            <TouchableOpacity 
              testID="confirm-button"
              style={[styles.button, styles.confirmButton]} 
              onPress={handleSubmit}
            >
              <Text style={styles.buttonText}>Add Activity</Text>
            </TouchableOpacity>
          </View>
        </View>
      </View>
    </Modal>
  );
...
